--- a/lab/templates/lab/pages/laudo_perfil.html
+++ b/lab/templates/lab/pages/laudo_perfil.html
@@ -1,4 +1,4 @@
-{% extends "global/base.html" %}
+{% extends "global/base_report_profile.html" %}
 {% block title %}Laudo |{% endblock title %}
 
 {% block content %}
